# GPGPU

./: CMakeLists.txt  README.md
src/: main.cu
src/cpu/: reference.cpp  reference.hpp
src/tiled/: student_tiled_naive.cu  student_tiled_naive.hpp  student_tiled_optimized.cu  student_tiled_optimized.hpp
src/view_test/: student_view_double_kernel.cu  student_view_double_kernel.hpp  student_view_fully_optimized.cu  student_view_fully_optimized.hpp  student_view_naive.cu  student_view_naive.hpp  student_view_optimized.cu  student_view_optimized.hpp
utils/: chronoCPU.cpp  chronoCPU.hpp  chronoGPU.cu  chronoGPU.hpp  commonCUDA.hpp  geometry.cpp  geometry.hpp  ppm.cpp  ppm.hpp  variable.hpp
